--- a/index.html
+++ b/index.html
@@ -72,5 +72,7 @@
 </head>
 <body class="selection:bg-blue-500/30">
   <div id="root"></div>
+  <!-- Explicitly load the entry point -->
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
